--- a/fontconvert.html
+++ b/fontconvert.html
@@ -36,7 +36,10 @@
       <br /><br />
       <textarea id="newtext"></textarea>
     </div>
-    <footer>
+    <footer><center>
+  <h4>Designed with 👨‍💻 & ❤️ by Mahmood</h4>
+  
+  </center>
       &copy; Copyrights. All Rights Reserved.
       <!-- <script>
         document.write(new Date().getFullYear());
